--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">0796759850</string>
+    <string name="app_name">Event Scope</string>
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="login">login</string>
@@ -10,12 +10,12 @@
     <string name="welcome_back">Welcome Back</string>
     <string name="empty" />
     <string name="home">Home</string>
-    <string name="about">about</string>
+    <string name="about">About</string>
     <string name="logout">logout</string>
-    <string name="apen">Apen Softwares</string>
-    <string name="add_stud">Student Registration</string>
-    <string name="save_data">Save Student</string>
+    <string name="apen">Event Scope</string>
+    <string name="add_event">ADD EVENT</string>
+    <string name="save_data">SAVE EVENT</string>
     <string name="select_image">Select Image</string>
-    <string name="developer">Developed with ❤ by Ezra</string>
+    <string name="developer">Developed with ❤ by Sang</string>
     <string name="call">Call me 📲</string>
 </resources>
